--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node --env-file=.env --watch src/server.js",
     "start": "node --env-file=.env src/server.js",
-    "selftest": "node src/selftest.js"
+    "selftest": "node src/selftest.js",
+    "selftest:sequence": "node src/sequence-selftest.js"
   },
   "dependencies": {
     "express": "^4.19.2",
