Wire web Alerts page to API stub and enable CORS
API: add CORS and /stub/alerts/today; Web: fetch alerts from api (localhost:3000) and render with loading/empty states.

--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "cors": "^2.8.5"
   }
 }
