Admin Alerts: support 対応中/完了 actions and update KPIs; CI builds web
Wire LINE postback stub end-to-end and include web build in CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,16 @@ jobs:
           node-version: 18
       - run: npm ci || npm install
       - run: npm run selftest
+
+  web:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm ci || npm install
+      - run: npm run build
