LINE integration groundwork: SDK, signature middleware, docs
Add @line/bot-sdk, verify LINE signature when configured, and document endpoints and env vars for LINE setup.

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "@line/bot-sdk": "^9.0.2"
   }
 }
