Supabaseの依存関係を追加し、環境変数の設定を更新
- .env.exampleにSupabase関連の環境変数を追加
- package.jsonおよびpackage-lock.jsonに@supabase/supabase-jsとdotenvを追加
- app-improved.jsに気象データ取得のための新しいエンドポイントを追加し、エラーハンドリングとロギングを強化

--- a/api/.env.example
+++ b/api/.env.example
@@ -11,3 +11,9 @@ LINE_CHANNEL_ACCESS_TOKEN=
 LINE_CHANNEL_SECRET=
 # Optional: not required for Messaging API push/reply. Useful for LIFF/LINE Login etc.
 LINE_CHANNEL_ID=
+
+# Supabase
+# Get these from https://app.supabase.com/project/[YOUR-PROJECT]/settings/api
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_KEY=
