--- a/api/package.json
+++ b/api/package.json
@@ -10,10 +10,12 @@
     "selftest:sequence": "node src/sequence-selftest.js"
   },
   "dependencies": {
+    "@line/bot-sdk": "^9.0.2",
+    "@supabase/supabase-js": "^2.54.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.7",
-    "cors": "^2.8.5",
-    "@line/bot-sdk": "^9.0.2"
+    "nanoid": "^5.0.7"
   }
 }
