Twilioの依存関係を追加し、環境変数の設定を更新
- .env.exampleにTwilio関連の環境変数を追加
- package.jsonおよびpackage-lock.jsonにTwilioライブラリを追加
- workerスクリプトのための新しいnpmスクリプトを追加

--- a/api/.env.example
+++ b/api/.env.example
@@ -17,3 +17,10 @@ LINE_CHANNEL_ID=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_KEY=
+
+# Twilio
+# Get these from https://console.twilio.com/
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=  # Your Twilio phone number (e.g., +815012345678)
+TWILIO_WEBHOOK_URL=   # Your server URL for webhooks (e.g., https://your-domain.com/webhooks/twilio)
