--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "node --env-file=.env --watch src/server.js",
     "start": "node --env-file=.env src/server.js",
+    "worker": "node --env-file=.env src/worker.js",
+    "worker:dev": "node --env-file=.env --watch src/worker.js",
     "selftest": "node src/selftest.js",
     "selftest:sequence": "node src/sequence-selftest.js"
   },
@@ -16,6 +18,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "twilio": "^5.8.0"
   }
 }
