--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,10 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
