APIサーバーのワーカーを起動する機能を追加し、Twilio関連のルーティングを実装
- start.shにワーカープロセスを起動する処理を追加
- package.jsonでサーバーのスクリプトを改善し、server-improved.jsを使用
- app-improved.jsにTwilioのWebhook用ルーティングを追加
- apiRoutes.jsに通話履歴を取得するエンドポイントを追加
- twilioService.jsでWebhook URL未設定時の処理を改善

これにより、Twilioとの連携が強化され、通話履歴の取得が可能になります。

--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node --env-file=.env --watch src/server.js",
-    "start": "node --env-file=.env src/server.js",
+    "dev": "node --env-file=.env --watch src/server-improved.js",
+    "start": "node --env-file=.env src/server-improved.js",
     "worker": "node --env-file=.env src/worker.js",
     "worker:dev": "node --env-file=.env --watch src/worker.js",
     "selftest": "node src/selftest.js",
