環境変数の設定を更新し、StripeおよびTwilioの機能を強化
- .env.exampleファイルにStripeの価格IDとTwilioのWebhookシークレットを追加し、環境変数の設定を明確化
- アプリケーションにLINEおよびヘルスチェック用のルートを追加し、APIの拡張を実施
- TwilioおよびLINE通知機能において、リクエストIDを使用したデバッグログを強化し、処理の透明性を向上
- エスカレーションジョブにリトライ機能を追加し、データ取得の信頼性を向上

これにより、通知機能の信頼性が向上し、デバッグが容易になります。

--- a/api/.env.example
+++ b/api/.env.example
@@ -24,3 +24,21 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=  # Your Twilio phone number (e.g., +815012345678)
 TWILIO_WEBHOOK_URL=   # Your server URL for webhooks (e.g., https://your-domain.com/webhooks/twilio)
+TWILIO_WEBHOOK_SECRET=  # Optional: for enhanced webhook signature verification
+
+# Stripe
+# Get these from https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Stripe Price IDs (Plan-specific)
+# Development/Test environment
+STRIPE_PRICE_BASIC=price_basic_dev
+STRIPE_PRICE_PREMIUM=price_premium_dev
+STRIPE_PRICE_ENTERPRISE=price_enterprise_dev
+
+# Production environment (replace with actual price IDs)
+# STRIPE_PRICE_BASIC=price_1QZBJzKzqAqEGQ55N5VCHQTW
+# STRIPE_PRICE_PREMIUM=price_1QZBJzKzqAqEGQ55G4VF2DGB
+# STRIPE_PRICE_ENTERPRISE=price_1QZBJzKzqAqEGQ55YR5GHIJQ
