気象サービスの統一とUUID形式の処理を改善
- 気象サービスのインポートを統一された形式に変更し、コードの一貫性を向上
- Supabaseデータストアにおいて、UUID形式の変換処理を追加し、無効なUUIDに対するエラーハンドリングを強化
- 環境変数を使用したスクリプトの追加により、データベースのマイグレーションとシード処理を容易に

これにより、データの整合性が向上し、気象データ取得の透明性が強化されます。

--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,11 @@
     "test:step3": "node --env-file=.env src/tests/step3-alert-and-call.js",
     "test:step4": "node --env-file=.env src/tests/step4-escalation-test.js",
     "test:step5": "node --env-file=.env src/tests/step5-integration-test.js",
-    "test:all": "npm run test:step5"
+    "test:all": "npm run test:step5",
+    "configure-rls:dev": "node --env-file=.env scripts/configure-rls.js development",
+    "configure-rls:prod": "node --env-file=.env scripts/configure-rls.js production",
+    "db:migrate": "node --env-file=.env scripts/migrate.js",
+    "db:seed": "node --env-file=.env scripts/seed-data.js"
   },
   "dependencies": {
     "@line/bot-sdk": "^9.0.2",
