--- a/api/.env.example
+++ b/api/.env.example
@@ -1,30 +1,32 @@
-# API server
+# 基本設定
+NODE_ENV=development
 PORT=3000
 
-# Optional HMAC for non-LINE webhooks (voice/SMS stubs)
-# WEBHOOK_SECRET=
+# ログレベル（debug, info, warn, error）
+LOG_LEVEL=info
 
-# LINE Messaging API
-# Required for push/reply
-LINE_CHANNEL_ACCESS_TOKEN=
-# Required to verify webhook signatures
-LINE_CHANNEL_SECRET=
-# Optional: not required for Messaging API push/reply. Useful for LIFF/LINE Login etc.
-LINE_CHANNEL_ID=
+# Webhook署名検証（セキュリティ強化のため推奨）
+WEBHOOK_SECRET=your-webhook-secret
 
-# Supabase
-# Get these from https://app.supabase.com/project/[YOUR-PROJECT]/settings/api
-SUPABASE_URL=
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_KEY=
+# データベース（必須）
+# Supabaseダッシュボードの Settings > API から取得
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_KEY=your-service-role-key
 
-# Twilio
-# Get these from https://console.twilio.com/
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_PHONE_NUMBER=  # Your Twilio phone number (e.g., +815012345678)
-TWILIO_WEBHOOK_URL=   # Your server URL for webhooks (e.g., https://your-domain.com/webhooks/twilio)
-TWILIO_WEBHOOK_SECRET=  # Optional: for enhanced webhook signature verification
+# Twilio設定（電話・SMS機能用、本番環境では必須）
+# Twilioコンソール https://console.twilio.com/ から取得
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your-auth-token
+TWILIO_PHONE_NUMBER=+15551234567
+TWILIO_WEBHOOK_URL=https://your-domain.com/webhooks/twilio
+TWILIO_WEBHOOK_SECRET=your-webhook-secret
+
+# LINE設定（LINE通知機能用、オプション）
+# LINE Developers Console から取得
+LINE_CHANNEL_ACCESS_TOKEN=your-channel-access-token
+LINE_CHANNEL_SECRET=your-channel-secret
+LINE_CHANNEL_ID=your-channel-id
 
 # Stripe
 # Get these from https://dashboard.stripe.com/apikeys
