テストスクリプトの更新と依存関係の追加
- `package.json`において、テストスクリプトを整理し、`test:pages`と`test:all`を追加
- `web/package.json`に`@playwright/test`を追加し、E2Eテストの実行環境を整備
- `package-lock.json`において、Playwright関連の依存関係を追加し、テストの信頼性を向上

これにより、テストの実行が容易になり、フロントエンドの品質向上に寄与します。

--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\" \"npm run dev:jobs\"",
     "dev:api": "cd api && npm run dev",
-    "dev:web": "cd web && npm run dev", 
+    "dev:web": "cd web && npm run dev",
     "dev:jobs": "cd jobs && npm run dev",
     "test": "node test-simple.js",
-    "test:full": "npm run test && cd web && npm run test:e2e",
-    "test:e2e": "cd web && npx playwright test tests/simple-e2e.js",
+    "test:pages": "node test-pages.js",
+    "test:all": "./test-all.sh",
+    "test:full": "npm run test && npm run test:pages",
     "build": "cd api && npm run build && cd ../web && npm run build",
     "start": "concurrently \"npm run start:api\" \"npm run start:web\"",
     "start:api": "cd api && npm start",
     "start:web": "cd web && npm start"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "puppeteer": "^24.16.2"
   }
 }
