--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "stripe": "^18.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@types/node": "24.2.1",
     "@types/react": "19.1.9",
     "typescript": "5.9.2"
