--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "dev:jobs": "cd jobs && npm run dev",
     "test": "node test-simple.js",
     "test:pages": "node test-pages.js",
+    "test:business": "node test-business-flow.js",
+    "test:simulation": "node test-alert-simulation.js",
     "test:all": "./test-all.sh",
-    "test:full": "npm run test && npm run test:pages",
+    "test:full": "npm run test && npm run test:pages && npm run test:business",
+    "test:complete": "npm run test && npm run test:pages && npm run test:business && npm run test:simulation",
     "build": "cd api && npm run build && cd ../web && npm run build",
     "start": "concurrently \"npm run start:api\" \"npm run start:web\"",
     "start:api": "cd api && npm start",
