テストスクリプトの追加と整理
- `package.json`に新たに`test:scenarios`、`test:enhanced`、および`test:all-scenarios`を追加し、テストの実行を簡素化
- これにより、テストの網羅性が向上し、開発プロセスの効率化に寄与します。

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:all": "./test-all.sh",
     "test:full": "npm run test && npm run test:pages && npm run test:business",
     "test:complete": "npm run test && npm run test:pages && npm run test:business && npm run test:simulation",
+    "test:scenarios": "node test-scenarios.js",
+    "test:enhanced": "node test-scenarios-enhanced.js",
+    "test:all-scenarios": "npm run test:scenarios && npm run test:enhanced",
     "build": "cd api && npm run build && cd ../web && npm run build",
     "start": "concurrently \"npm run start:api\" \"npm run start:web\"",
     "start:api": "cd api && npm start",
